changes in the new-branch

--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
             <h1>Nature</h1>
             <article>
                 <h1>Animals</h1>
-                <p>The animals are good</p>
+                <p>The animals are cute</p>
             </article>
             <article>
                 <h1>Plants</h1>
-                <p>The plants are important</p>
+                <p>The plants are important for the planet</p>
             </article>
         </section>
         <section id="vehicles">
