changes in main

--- a/index.html
+++ b/index.html
@@ -33,11 +33,11 @@
             <h1>Vehicles</h1>
             <article>
                 <h1>Car</h1>
-                <p>Has 4 tires</p>
+                <p>Has 4 tires and usually 4 doors</p>
             </article>
             <article>
                 <h1>Bike</h1>
-                <p>Has 2 tires</p>
+                <p>Has 2 tires and usually one seat</p>
             </article>
         </section>
     </main>
